<resources>
    <string name="app_name">CountryListApp</string>
    <string name="bengalore">Bengalore</string>
    <string name="str_no_result_found">No data</string>
    <string name="search_country">search by country or city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="country_list">Country List</string>
    <string name="city_list">City List</string>
    <string name="recommended">Recommended</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cancel">Cancel</string>
    <string name="recharge">Recharge</string>
    <string name="bottom_sheet_title">Add Money To Your Wallet And Make Payment</string>
    <string name="online">online</string>
    <string name="upi">UPI</string>
</resources>