<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/nuinito_bold"
        android:gravity="start"
        android:text="@string/bottom_sheet_title"
        android:textColor="#1B1718"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:drawableEnd="@drawable/ic_baseline_currency_rupee"
        android:gravity="start"
        android:padding="10dp"
        android:textColor="#7A5D60" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/nuinito_bold"
        android:gravity="start"
        android:text="@string/recommended"
        android:textColor="#1B1718"
        android:textSize="18sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:padding="15dp"
            android:text="10000"
            app:drawableStartCompat="@drawable/ic_baseline_currency_rupee"
            app:drawableTint="@color/white"
            app:layout_constraintEnd_toStartOf="@id/btn2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:drawableStart="@drawable/ic_baseline_currency_rupee"
            android:padding="15dp"
            android:text="20000"
            app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintStart_toEndOf="@id/btn1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_currency_rupee"
            android:padding="15dp"
            android:text="30000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn2"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/nuinito_bold"
        android:gravity="start"
        android:text="@string/payment_mode"
        android:textColor="#1B1718"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/purple_700"
            android:text="@string/online" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:buttonTint="@color/purple_700"
            android:text="@string/upi" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_bg"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/recharge_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/recharge_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/selected_btn_bg"
            android:padding="15dp"
            android:text="@string/recharge"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cancel_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

